# Fastapi-Db-2

./: .env  database.db  main.py  pyproject.toml
conexao/: conex.py  schema.py
sql_routes/: sql_route.py
test/: conftest.py  test_banco.py
